# mandy

./: Cargo.toml  README.md  build.bat  build.rs  config.json  installer.manifest
src/: build.rs  converter.rs  main.rs
