[package]
name = "mandy"
version = "1.0.0"
edition = "2021"

[[bin]]
name = "mandy-installer"
path = "src/main.rs"

[[bin]]
name = "mandy-converter"
path = "src/converter.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
pulldown-cmark = "0.11"
winreg = "0.52"

[build-dependencies]
winres = "0.1"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_System_Registry",
    "Win32_UI_Shell",
    "Win32_Security",
    "Win32_System_Threading",
] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true